2009-02-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TaskStatusButton.cs:
	Show only background UserJobs in the task status button.

2009-01-31  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Extensions/Banshee.Bookmarks/Banshee.Bookmarks/BookmarksService.cs:
	Explicitly convert integers coming from the DB, as Mono.Data.Sqlite
	returns them as Int64 (BGO #569966).

2009-01-30  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs: Show the
	pause/stop button when Loading/Loaded.

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/ConnectedSeekSlider.cs:
	Handle Loading player state, set Live property on the position label, and
	use the position label's enum state property instead of a handful of bools

	* src/Core/Banshee.Services/Banshee.Streaming/RadioTrackInfo.cs: Start
	playing internet radio playlists in a separate thread to avoid blocking
	the UI (BGO #548040, BNC #376532).  Handle the case where the user
	presses stop or switches to a different track while we're
	downloading/processing the playlist file (previously we would have started
	playing once ready, even if the user had already moved on).  Also, fix
	bug where errors reported by the MediaEngine (GStreamer) weren't shown to
	the user.

	* src/Core/Banshee.Services/Banshee.MediaEngine/PlayerEngine.cs: If the
	engine is in PlayerState.Contacting, don't Close/stop since this is a
	state we set in managed land for loading internet radio tracks.

	* src/Core/Banshee.Services/Banshee.MediaEngine/PlayerEngineService.cs:
	Add Start/EndSynthesizeContacting internal methods for use by
	RadioTrackInfo - basically a hack until we move the playlist loading logic
	from RadioTrackInfo to the PlayerENgine to get UI bits updated
	appropriately.  Fix IsPlaying to include Contacting/Loading/Loaded, so
	that TogglePlaying will Pause if in any of those states (not just if in